# airlines_delay_prediction_using_Spark

./: README.md  airline_delay_prediction.ipynb
airlines_delay_prediction/: pyproject.toml
airlines_delay_prediction/src/airlines_delay_prediction/: airline_delay_prediction.ipynb
