[project]
name = "airlines-delay-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "ramkrishnakhan",email = "khan.ramkrishna1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "pyspark (>=4.0.1,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)"
]

[tool.poetry]
packages = [{include = "airlines_delay_prediction", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
